--- a/platform/android/build.gradle.in
+++ b/platform/android/build.gradle.in
@@ -58,7 +58,7 @@ android {
 
     ndkVersion = '@ANDROID_NDK_VERSION@'
     compileSdkVersion = @ANDROID_TARGET_PLATFORM@
-    namespace = 'ch.opengis.@APP_PACKAGE_NAME@'
+    namespace = 'com.sigpacgo.@APP_PACKAGE_NAME@'
 
     sourceSets {
         main {
