--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,6 +62,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          
+      - name: Setup Package Environment
+        run: |
+          chmod +x scripts/setup-package.sh
+          ./scripts/setup-package.sh
 
       - name: ♻️ Check disk space
         run: df . -h
