--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,7 +153,7 @@ if(MSVC)
   add_compile_options("$<$<NOT:$<CONFIG:Debug>>:/Zi>")
   add_link_options("$<$<NOT:$<CONFIG:Debug>>:/DEBUG>")
   add_link_options("$<$<NOT:$<CONFIG:Debug>>:/OPT:REF>")
-  add_link_options("$<$<NOT:$<CONFIG:Debug>>:/OPT:ICF>")
+  add_link_options("$<$<CONFIG:Debug>>:/OPT:ICF>")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
   set(CMAKE_XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT "dwarf-with-dsym")
